--- a/ead-authuser-service.yaml
+++ b/ead-authuser-service.yaml
@@ -40,6 +40,14 @@ ead:
     exchange:
       userEvent: ead.userevent
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - refresh
+          - health
+          
 resilience4j:
   circuitbreaker:
     instances:
@@ -56,3 +64,6 @@ resilience4j:
         max-attempts: 3
         wait-duration: 5s
 
+authuser:
+  refreshscope:
+    name: Eliel Batiston
