--- a/application.yaml
+++ b/application.yaml
@@ -1,6 +1,11 @@
+ead:
+  serviceRegistry:
+    username: admin
+    password: 'admin'
+
 eureka:
   client:
     service-url:
-      default-zone: "http://localhost:8761/eureka"
+      defaultZone: 'http://${ead.serviceRegistry.username}:${ead.serviceRegistry.password}@localhost:8761/eureka'
     instance:
       hostname: localhost
